tests/test_files/errors/op_unary1.over
unary: +4
unary2: +null
